--- a/Services/DAL/i18n/Idioma.en-US.resx
+++ b/Services/DAL/i18n/Idioma.en-US.resx
@@ -120,8 +120,17 @@
   <data name="Bienvenido" xml:space="preserve">
     <value>Welcome</value>
   </data>
+  <data name="Buscar" xml:space="preserve">
+    <value>Search</value>
+  </data>
   <data name="Contrasenia" xml:space="preserve">
     <value>Password</value>
+  </data>
+  <data name="Desde" xml:space="preserve">
+    <value>From</value>
+  </data>
+  <data name="Hasta" xml:space="preserve">
+    <value>To</value>
   </data>
   <data name="Idioma" xml:space="preserve">
     <value>Language</value>
