--- a/Services/DAL/i18n/Idioma.es-ES.resx
+++ b/Services/DAL/i18n/Idioma.es-ES.resx
@@ -120,8 +120,17 @@
   <data name="Bienvenido" xml:space="preserve">
     <value>Bienvenido</value>
   </data>
+  <data name="Buscar" xml:space="preserve">
+    <value>Buscar</value>
+  </data>
   <data name="Contrasenia" xml:space="preserve">
     <value>Contraseña</value>
+  </data>
+  <data name="Desde" xml:space="preserve">
+    <value>Desde</value>
+  </data>
+  <data name="Hasta" xml:space="preserve">
+    <value>Hasta</value>
   </data>
   <data name="Idioma" xml:space="preserve">
     <value>Idioma</value>
