--- a/Services/DAL/i18n/Idioma.es-ES.resx
+++ b/Services/DAL/i18n/Idioma.es-ES.resx
@@ -123,6 +123,9 @@
   <data name="Buscar" xml:space="preserve">
     <value>Buscar</value>
   </data>
+  <data name="Compras" xml:space="preserve">
+    <value>Compras</value>
+  </data>
   <data name="Contrasenia" xml:space="preserve">
     <value>Contraseña</value>
   </data>
@@ -137,5 +140,8 @@
   </data>
   <data name="Usuario" xml:space="preserve">
     <value>Usuario</value>
+  </data>
+  <data name="Ventas" xml:space="preserve">
+    <value>Ventas</value>
   </data>
 </root>
